확장 함수 적용

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
 compileKotlin {
     kotlinOptions {
         jvmTarget = "11"
