--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,11 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+    open-in-view: false
   h2:
     console:
       enabled: true
       path: '/h2-console'
+
+logging.level:
+  org.hibernate.type.descriptor.sql.BasicBinder: trace
